[refactor]: 스프링 시큐리티 및 JwtAuthenticationFilter 리팩토링