@@ -24,98 +24,94 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-   private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-   // Constants
-   private static final String API_V1 = "/api/v1/";
-   private static final List<String> ALLOWED_ORIGINS = List.of(
-           "https://picktory.net",
-           "https://www.picktory.net",
-           "http://localhost:3000",
-           "http://localhost:8080"
-   );
-   private static final List<String> ALLOWED_HEADERS = Arrays.asList(
-           "Origin",
-           "Content-Type",
-           "Accept", 
-           "Authorization",
-           "X-Requested-With"
-   );
-   private static final List<String> ALLOWED_METHODS = Arrays.asList(
-           "GET",
-           "POST",
-           "PUT", 
-           "DELETE",
-           "OPTIONS"
-   );
+    private static final String API_V1 = "/api/v1/";
+    private static final List<String> ALLOWED_ORIGINS = List.of(
+            "https://picktory.net",
+            "https://www.picktory.net",
+            "http://localhost:3000",
+            "http://localhost:8080"
+    );
+    private static final List<String> ALLOWED_HEADERS = Arrays.asList(
+            "Origin",
+            "Content-Type",
+            "Accept",
+            "Authorization",
+            "X-Requested-With"
+    );
+    private static final List<String> ALLOWED_METHODS = Arrays.asList(
+            "GET",
+            "POST",
+            "PUT",
+            "DELETE",
+            "OPTIONS"
+    );
 
-   @Bean
-   public PasswordEncoder passwordEncoder() {
-       return new BCryptPasswordEncoder();
-   }
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
 
-   @Bean
-   public SecurityFilterChain filterChain(final HttpSecurity http) throws Exception {
-       return http
-               .authorizeHttpRequests(auth -> auth
-                       // 루트 URL(/) 접근 허용
-                       .requestMatchers("/", "/favicon.ico", "/default-ui.css").permitAll()
-                       // Swagger & Preflight
-                       .requestMatchers("/swagger-ui.html", "/swagger-ui/**", "/v3/api-docs/**").permitAll()
-                       .requestMatchers(CorsUtils::isPreFlightRequest).permitAll()
-                       .requestMatchers(getPublicEndpoints()).permitAll()
-                       .requestMatchers(getAuthenticatedEndpoints()).authenticated()
-                       .anyRequest().authenticated()
-               )
-               .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-               .headers(header -> header.frameOptions(HeadersConfigurer.FrameOptionsConfig::disable).disable())
-               .httpBasic(AbstractHttpConfigurer::disable)
-               .csrf(AbstractHttpConfigurer::disable)
-               .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-               .formLogin(AbstractHttpConfigurer::disable) // /login 자동 리디렉트 방지
-               .build();
-   }
+    @Bean
+    public SecurityFilterChain filterChain(final HttpSecurity http) throws Exception {
+        return http
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(getPublicEndpoints()).permitAll()
+                        .requestMatchers(CorsUtils::isPreFlightRequest).permitAll()
+                        .requestMatchers(getAuthenticatedEndpoints()).authenticated()
+                        .anyRequest().authenticated()
+                )
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .headers(header -> header.frameOptions(HeadersConfigurer.FrameOptionsConfig::disable).disable())
+                .httpBasic(AbstractHttpConfigurer::disable)
+                .csrf(AbstractHttpConfigurer::disable)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .formLogin(AbstractHttpConfigurer::disable)
+                .build();
+    }
 
-   private String[] getPublicEndpoints() {
-       return new String[]{
-               "/api/v1/**",
-               "/swagger-ui.html",
-               "/swagger-ui/**",
-               "/v3/api-docs/**",
-               "/favicon.ico",
-               API_V1 + "oauth/login",
-               API_V1 + "auth/backup/signup",
-               API_V1 + "auth/backup/login",
-               API_V1 + "gifts/{link}/**"
-       };
-   }
+    private String[] getPublicEndpoints() {
+        return new String[]{
+                "/",
+                "/swagger-ui.html",
+                "/swagger-ui/**",
+                "/v3/api-docs/**",
+                "/favicon.ico",
+                "/default-ui.css",
+                API_V1 + "oauth/login",
+                API_V1 + "auth/backup/signup",
+                API_V1 + "auth/backup/login",
+                API_V1 + "gifts/{link}/**"
+        };
+    }
 
-   private String[] getAuthenticatedEndpoints() {
-       return new String[]{
-               API_V1 + "oauth/logout",
-               API_V1 + "user/me",
-               API_V1 + "user/me/backup",
-               API_V1 + "bundles",
-               API_V1 + "bundles/main",
-               API_V1 + "bundles/{id}/**",
-               API_V1 + "bundles/{id}/save",
-               API_V1 + "bundles/{id}/gifts/**",
-               API_V1 + "bundles/{id}/delivery",
-               API_V1 + "bundles/{id}/deliver"
-       };
-   }
+    private String[] getAuthenticatedEndpoints() {
+        return new String[]{
+                API_V1 + "oauth/logout",
+                API_V1 + "user/me",
+                API_V1 + "user/me/backup",
+                API_V1 + "bundles",
+                API_V1 + "bundles/main",
+                API_V1 + "bundles/{id}/**",
+                API_V1 + "bundles/{id}/save",
+                API_V1 + "bundles/{id}/gifts/**",
+                API_V1 + "bundles/{id}/delivery",
+                API_V1 + "bundles/{id}/deliver"
+        };
+    }
 
-   @Bean
-   public CorsConfigurationSource corsConfigurationSource() {
-       final CorsConfiguration configuration = new CorsConfiguration();
-       configuration.setAllowedOrigins(ALLOWED_ORIGINS);
-       configuration.setAllowedHeaders(ALLOWED_HEADERS);
-       configuration.setAllowedMethods(ALLOWED_METHODS);
-       configuration.setAllowCredentials(true);
-       configuration.setMaxAge(3600L);
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        final CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(ALLOWED_ORIGINS);
+        configuration.setAllowedHeaders(ALLOWED_HEADERS);
+        configuration.setAllowedMethods(ALLOWED_METHODS);
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
-       final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-       source.registerCorsConfiguration("/**", configuration);
-       return source;
-   }
+        final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 }
